Event Trigger Modified 💢

--- a/.github/workflows/3DContrib.yml
+++ b/.github/workflows/3DContrib.yml
@@ -1,12 +1,9 @@
 name: GitHub-Profile-3D-Contrib
 
-#on:
-#  schedule:
-#    - cron: "* * * * *"
-#  workflow_dispatch:
 on:
-  push:
-    branches: [ master ]
+  schedule:
+    - cron: "0 6 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
