--- a/.github/workflows/WakaReadMe.yml
+++ b/.github/workflows/WakaReadMe.yml
@@ -2,7 +2,7 @@ name: Waka Readme
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
   schedule:
     - cron: "0 0 * * *"
 
@@ -11,9 +11,16 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TITLE: true
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          COMMIT_BY_ME: "True"
+          COMMIT_MESSAGE: "📊 Waka Stat's Updated❗"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_LOC_CHART: "False"
+          SHOW_EDITORS: "False"
+          SHOW_OS: "False"
