--- a/.github/workflows/WakaReadMe.yml
+++ b/.github/workflows/WakaReadMe.yml
@@ -19,8 +19,9 @@ jobs:
           COMMIT_MESSAGE: "📊 Waka Stat's Updated❗"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_SHORT_INFO: "False"
-          SHOW_LINES_OF_CODE: "True"
+          SHOW_LINES_OF_CODE: "False"
           SHOW_PROJECTS: "True"
           SHOW_LOC_CHART: "False"
           SHOW_EDITORS: "False"
           SHOW_OS: "False"
+          SHOW_UPDATED_DATE: "False"
