--- a/.github/workflows/WakaReadMe.yml
+++ b/.github/workflows/WakaReadMe.yml
@@ -25,4 +25,5 @@ jobs:
           SHOW_LOC_CHART: "False"
           SHOW_EDITORS: "False"
           SHOW_OS: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
           SHOW_UPDATED_DATE: "True"
