--- a/.github/workflows/WakaReadMe.yml
+++ b/.github/workflows/WakaReadMe.yml
@@ -4,7 +4,7 @@ on:
   # push:
   #   branches: [ master ]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
